Fix middle button vertical align

--- a/application/src/Vitoop/InfomgmtBundle/Resources/public/css/vitoop.scss
+++ b/application/src/Vitoop/InfomgmtBundle/Resources/public/css/vitoop.scss
@@ -254,6 +254,7 @@ table input[disabled="disabled"].vtp-uiaction-coefficient {
 #vtp-search-bytags-taglistbox {
     position: relative;
     border: 2px solid #f2f5f7;
+    height: 23px;
     padding: 0.3em 1em 0.3em 0.3em;
 }
 
